<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".main.CellActivity">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loadingEarthGifView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/earth_loading"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <TextView
            android:id="@+id/cellSignalsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signalsView_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cellSignalsView"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />


        <TextView
            android:id="@+id/myLocationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_LocationView_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cellSignalsView" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/myLocationView"
            app:layout_constraintTop_toBottomOf="@+id/cellSignalsView" />

        <TextView
            android:id="@+id/cellLocationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell_LocationView_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myLocationView" />

        <ProgressBar
            android:id="@+id/progressBar3"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cellLocationView"
            app:layout_constraintTop_toBottomOf="@+id/myLocationView" />

        <TextView
            android:id="@+id/distanceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanceView_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cellLocationView" />

        <ProgressBar
            android:id="@+id/progressBar4"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/distanceView"
            app:layout_constraintTop_toBottomOf="@+id/cellLocationView" />

        <TextView
            android:id="@+id/loadingARView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ARView_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceView" />

        <ProgressBar
            android:id="@+id/progressBar5"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/loadingARView"
            app:layout_constraintTop_toBottomOf="@+id/distanceView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>